--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="card">
     <h1>PARTY GAMES</h1>
 
-    <a href="/app">
+    <a href="/app.html">
       Download on App Store
     </a>
 
