--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- לוגו -->
     <img
-      src="/assets/logo.png"
+      src="/assets/partygameslogo.png"
       alt="Party Games Logo"
       class="logo"
     />
